After applying inline css in cv

--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Siddharth's personal site</title>
+    <style>
+     body{
+        background-color: #F4EEFF;
+     }
+     hr{
+        border-style: dotted none none;
+        height: 0px;
+        background-color: white;
+        width: 7%;
+        border-width: 10px;
+        border-color: rgb(194, 188, 188);
+     }
+    </style>
 </head>
 <body>
    <table cellspacing = "40">
     <tr>
-        <td> <img src="mypic.png" alt="" width="330" height="350"></td>
+        <td> <img src="mypic.png" alt="" width="200" height="200"></td>
         <td>
             <h1>SIDDHARTH RATHORE</h1>
             <h3><i>Web Developer, Android App Developer and <strong>Software Tester</strong></i></h3>
